// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationSkipInset renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: 0;
  text-decoration-skip-inset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: 0;
  text-decoration-skip-inset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: 0;
  text-decoration-skip-inset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: 0;
  text-decoration-skip-inset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: hasnot;
  text-decoration-skip-inset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: has;
  text-decoration-skip-inset: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: hasnot;
  text-decoration-skip-inset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: has;
  text-decoration-skip-inset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: invalid.path.1;
  text-decoration-skip-inset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: invalid.path.1;
  text-decoration-skip-inset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: invalid.path.1;
  text-decoration-skip-inset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: invalid.path.1;
  text-decoration-skip-inset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: -54881;
  text-decoration-skip-inset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: -54881;
  text-decoration-skip-inset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: -42365;
  text-decoration-skip-inset: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: -42365;
  text-decoration-skip-inset: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: July;
  text-decoration-skip-inset: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: July;
  text-decoration-skip-inset: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: January;
  text-decoration-skip-inset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: December;
    text-decoration-skip-inset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: June;
    text-decoration-skip-inset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: January;
  text-decoration-skip-inset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: December;
    text-decoration-skip-inset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: June;
    text-decoration-skip-inset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: July;
    text-decoration-skip-inset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: July;
    text-decoration-skip-inset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: June;
    text-decoration-skip-inset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: June;
    text-decoration-skip-inset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: July;
  text-decoration-skip-inset: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: July;
  text-decoration-skip-inset: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: April;
  text-decoration-skip-inset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: January;
    text-decoration-skip-inset: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: December;
    text-decoration-skip-inset: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: April;
  text-decoration-skip-inset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: January;
    text-decoration-skip-inset: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: December;
    text-decoration-skip-inset: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-skip-inset: July;
    text-decoration-skip-inset: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-skip-inset: July;
    text-decoration-skip-inset: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: September;
    text-decoration-skip-inset: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: November;
    text-decoration-skip-inset: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: August;
    text-decoration-skip-inset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-inset: January;
    text-decoration-skip-inset: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: December;
    text-decoration-skip-inset: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: June;
    text-decoration-skip-inset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-inset: January;
    text-decoration-skip-inset: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: December;
    text-decoration-skip-inset: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-inset: April;
    text-decoration-skip-inset: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-inset: May;
    text-decoration-skip-inset: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-inset: June;
    text-decoration-skip-inset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: 54881;
  text-decoration-skip-inset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: 54881;
  text-decoration-skip-inset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: 42365;
  text-decoration-skip-inset: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: 42365;
  text-decoration-skip-inset: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: July;
  text-decoration-skip-inset: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: July;
  text-decoration-skip-inset: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: June;
  text-decoration-skip-inset: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: June;
  text-decoration-skip-inset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipInset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textDecorationSkipInset renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-inset: DarkSlateBlue;
  text-decoration-skip-inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: DarkSlateBlue;
  text-decoration-skip-inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: DarkSlateBlue;
  text-decoration-skip-inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-inset: DarkSlateBlue;
  text-decoration-skip-inset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
